Correction of the footer for more readability

--- a/public/stylesheets/global.styl
+++ b/public/stylesheets/global.styl
@@ -39,6 +39,9 @@ h3
   border-top $dashed $main-color
   border-bottom $dashed $main-color
 
+.top-white-section
+  border-top $dashed $main-color
+
 .well
   background-color white
   border $solid $second-color
